// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthKeeper register multiple validators succeeds 1`] = `
Object {
  "calldataByteLength": 3588,
  "gasUsed": 699582,
}
`;

exports[`EthKeeper register multiple validators succeeds 2`] = `
Object {
  "calldataByteLength": 3588,
  "gasUsed": 605784,
}
`;

exports[`EthKeeper register single validator succeeds 1`] = `
Object {
  "calldataByteLength": 996,
  "gasUsed": 273390,
}
`;
